overflow fix

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -183,14 +183,17 @@
         .work-container {
             display: flex;
             flex-direction: column;
+            justify-content: center;
             width: 100%;
             height: 100%;
             padding: 0 $col;
+            & > *:not(:first-child) {
+                margin-top: $base-margin * 22;
+            }
             .work-row {
                 display: flex;
                 justify-content: space-between;
                 align-items: flex-start;
-                margin-top: $base-margin * 22;
                 .element-1 {
                     position: relative;
                     display: flex;
@@ -245,7 +248,6 @@
                     .definition-2 {
                         width: $col * 4 + $gap * 4;
                         padding: $base-padding * 5 $base-padding * 26;
-                        margin-top: $base-margin * -10;
                         border-radius: $full-border-radius;
                         background-color: var(--md-sys-color-secondary-container);
                         p {
